<resources>
    <string name="app_name">PetChampionship</string>
    <string name="profile">Профиль</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="sign_out">Выйти</string>
    <string name="sign_in_to_continue">Для продолжения необходимо войти</string>
    <string name="name">Имя</string>
    <string name="update">Обновить</string>
    <string name="back">Назад</string>
    <string name="unsuccessful_sign_up">Неудачная попытка авторизации, попробуйте позже</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="this_week">На этой неделе</string>
    <string name="add_cd">add</string>
    <string name="enter_name">Введите имя</string>
    <string name="create">Создать</string>
</resources>
